tests/src/frontend/typechecking/invalid/visibility_match_1.sk
class Foo(x: Int, private y: Int)

fun no(f: Foo): Int {
  f match {
  | Foo(a, b) -> a + b
  }
}
